@@ -13,6 +13,7 @@
 if (file_exists(dirname(__FILE__) . '/SSI.php') && !defined('SMF'))
 {
 	require_once(dirname(__FILE__) . '/SSI.php');
+	db_extend('packages');
 	$standalone = true;
 }
 //	Hmm... no SSI.php and no SMF?
