@@ -20,6 +20,6 @@ Settings are stored in the `smf_settings` table. Many of these settings use seri
 || `pretty_board_lookup` || A serialized array of `URL => ID_BOARD` pairs, used for processing `$_GET['board']`. There can be more than one URL for each board. ||
 || `pretty_board_urls` || A serialized array of `ID_BOARD => URL` pairs, used for generating pretty replacement URLs. ||
 || `pretty_enable_filters` || Sets whether to prettify anything at all. 0 for no, 1 for yes. ||
-|| `pretty_filters` || A serialized array of filter data. ||
+|| `pretty_filters` || A serialized array of [Filters filter data]. ||
 || `pretty_filter_callbacks` || A serialized array of callback function names, sorted by priority. Don't manually edit this, edit the `pretty_filters` setting instead. ||
 || `pretty_root_url` || The base URL used by the board and topic filters, which by default is the same as `$boardurl`. ||
